--- a/index.html
+++ b/index.html
@@ -2,24 +2,143 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-
-  <title>Landing Page</title>
-
-  <!-- Bootstrap css -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+   <link rel="stylesheet" href="css/main.css">
+   <title>Site Test</title>
 </head>
 
 <body>
-  <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="logo.png" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Название карточки</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Переход куда-нибудь</a>
-    </div>
-  </div>
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+         <a class="navbar-brand" href="#">
+        <img src="assets/i/logo.png" alt="">
+      </a>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+               <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+               </li>
+               <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Contract
+        </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                     <a class="dropdown-item" href="#">Sochi</a>
+                     <a class="dropdown-item" href="#">Moscow</a>
+                     <a class="dropdown-item" href="#">Saint-Petersburg</a>
+                  </div>
+               </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+               <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
+            </form>
+         </div>
+      </div>
+   </nav>
+
+   <header class="header d-flex flex-column justify-content-center">
+      <div class="container">
+         <h1 class="display-2">DT website</h1>
+         <p class="lead">
+            Test version of a possible site. DT Team Dev Prod.
+         </p>
+      </div>
+   </header>
+
+   <main class="main">
+      <div class="container">
+         <div class="row">
+
+            <div class="col-3">
+               <div class="card mb-4">
+                  <img class="card-img-top" src="assets/i/author.jpg" alt="Card image cap">
+                  <div class="card-body">
+                     <h5 class="card-title">About us</h5>
+                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+               </div>
+               <h3>Subscribe</h3>
+               <div class="block">
+                  <form method="post" action="/">
+                     <div class="form-group">
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                     </div>
+                     <button type="submit" class="btn btn-success btn-block">Subscribe</button>
+                  </form>
+               </div>
+            </div>
+
+            <div class="col-6">
+               <div class="card mb-4">
+                  <img class="card-img-top" src="assets/i/photo-1.jpg" alt="Card image cap">
+                  <div class="card-body">
+                     <h5 class="card-title">Post title</h5>
+                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                     <a href="#" class="btn btn-outline-primary btn-sm">Read more</a>
+                  </div>
+               </div>
+
+               <div class="card mb-4">
+                  <img class="card-img-top" src="assets/i/photo-2.jpg" alt="Card image cap">
+                  <div class="card-body">
+                     <h5 class="card-title">Post title</h5>
+                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                     <a href="#" class="btn btn-outline-primary btn-sm">Read more</a>
+                  </div>
+               </div>
+
+               <div class="card mb-4">
+                  <img class="card-img-top" src="assets/i/photo-3.jpg" alt="Card image cap">
+                  <div class="card-body">
+                     <h5 class="card-title">Post title</h5>
+                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                     <a href="#" class="btn btn-outline-primary btn-sm">Read more</a>
+                  </div>
+               </div>
+
+               <nav aria-label="Page navigation example">
+                  <ul class="pagination ">
+                     <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                     <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                     <li class="page-item"><a class="page-link" href="#">2</a></li>
+                     <li class="page-item"><a class="page-link" href="#">3</a></li>
+                     <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                  </ul>
+               </nav>
+            </div>
+
+            <div class="col-3">3</div>
+
+         </div>
+         <!-- /.row -->
+      </div>
+      <!-- /.container -->
+   </main>
+   <!-- /.main -->
+
+   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
