--- a/index.html
+++ b/index.html
@@ -126,7 +126,49 @@
                </nav>
             </div>
 
-            <div class="col-3">3</div>
+            <div class="col-3">
+               <ul class="list-group mb-4">
+                  <li class="list-group-item active">Section 1</li>
+                  <li class="list-group-item">Section 2</li>
+                  <li class="list-group-item">Section 3</li>
+                  <li class="list-group-item">Section 4</li>
+                  <li class="list-group-item">Section 5</li>
+               </ul>
+
+               <h3>Tags cloud</h3>
+               <div class="block">
+                  <a class="badge badge-info" href="#">travel</a>
+                  <a class="badge badge-info" href="#">rest</a>
+                  <a class="badge badge-info" href="#">mountain</a>
+                  <a class="badge badge-info" href="#">world</a>
+                  <a class="badge badge-info" href="#">nature</a>
+                  <a class="badge badge-info" href="#">photos</a>
+               </div>
+
+               <h3>Gallery</h3>
+               <div class="block">
+                  <div class="row no-gutters">
+                     <div class="col-6">
+                        <img class="img-fluid" src="assets/i/gallery-1.jpg" alt="">
+                     </div>
+                     <div class="col-6">
+                        <img class="img-fluid" src="assets/i/gallery-2.jpg" alt="">
+                     </div>
+                     <div class="col-6">
+                        <img class="img-fluid" src="assets/i/gallery-3.jpg" alt="">
+                     </div>
+                     <div class="col-6">
+                        <img class="img-fluid" src="assets/i/gallery-4.jpg" alt="">
+                     </div>
+                     <div class="col-6">
+                        <img class="img-fluid" src="assets/i/gallery-5.jpg" alt="">
+                     </div>
+                     <div class="col-6">
+                        <img class="img-fluid" src="assets/i/gallery-6.jpg" alt="">
+                     </div>
+                  </div>
+               </div>
+            </div>
 
          </div>
          <!-- /.row -->
@@ -134,6 +176,44 @@
       <!-- /.container -->
    </main>
    <!-- /.main -->
+
+   <footer class="footer">
+      <div class="container">
+         <div class="row">
+            <div class="col-3">
+               <h3>Dev Blog</h3>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, commodi, voluptates alias obcaecati laborum molestiae blanditiis consectetur molestias libero reprehenderit delectus, nobis aperiam iusto officiis accusamus dolore autem enim
+                  voluptate!</p>
+            </div>
+
+            <div class="col-3">
+               <h3>Contacts</h3>
+               <address>
+                  <b>DT, Inc.</b><br>
+                  Donskaya 228, Sochi, INDEX 354000 <br>
+                  P: +7 (800) 555-35-35 <br>
+               </address>
+            </div>
+
+            <div class="col-3">
+               <h3>Navigation</h3>
+               <nav class="nav flex-column">
+                  <a class="nav-link active" href="#">Active</a>
+                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" href="#">Disabled</a>
+               </nav>
+            </div>
+         </div>
+      </div>
+   </footer>
+
+   <div class="copyright">
+      <div class="container">
+         <img src="assets/i/logo.png" alt="">
+         <div>© Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+      </div>
+   </div>
 
    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
