--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <img src="assets/i/logo.png" alt="">
       </a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+             <span class="navbar-toggler-icon"></span>
+         </button>
 
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
@@ -30,8 +30,8 @@
                </li>
                <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Contract
-        </a>
+                   Contract
+                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                      <a class="dropdown-item" href="#">Sochi</a>
                      <a class="dropdown-item" href="#">Moscow</a>
@@ -60,7 +60,7 @@
       <div class="container">
          <div class="row">
 
-            <div class="col-3">
+            <div class="col-lg-3 order-3 order-lg-1">
                <div class="card mb-4">
                   <img class="card-img-top" src="assets/i/author.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -81,7 +81,7 @@
                </div>
             </div>
 
-            <div class="col-6">
+            <div class="col-lg-6 col-md-8 order-1 order-lg-2">
                <div class="card mb-4">
                   <img class="card-img-top" src="assets/i/photo-1.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -126,7 +126,7 @@
                </nav>
             </div>
 
-            <div class="col-3">
+            <div class="col-lg-3 col-md-4 order-2 order-lg-3">
                <ul class="list-group mb-4">
                   <li class="list-group-item active">Section 1</li>
                   <li class="list-group-item">Section 2</li>
@@ -137,12 +137,12 @@
 
                <h3>Tags cloud</h3>
                <div class="block">
-                  <a class="badge badge-info" href="#">travel</a>
-                  <a class="badge badge-info" href="#">rest</a>
-                  <a class="badge badge-info" href="#">mountain</a>
-                  <a class="badge badge-info" href="#">world</a>
-                  <a class="badge badge-info" href="#">nature</a>
-                  <a class="badge badge-info" href="#">photos</a>
+                  <a class="badge badge-pill badge-info" href="#">travel</a>
+                  <a class="badge badge-pill badge-info" href="#">rest</a>
+                  <a class="badge badge-pill badge-info" href="#">mountain</a>
+                  <a class="badge badge-pill badge-info" href="#">world</a>
+                  <a class="badge badge-pill badge-info" href="#">nature</a>
+                  <a class="badge badge-pill badge-info" href="#">photos</a>
                </div>
 
                <h3>Gallery</h3>
@@ -178,15 +178,16 @@
    <!-- /.main -->
 
    <footer class="footer">
-      <div class="container">
-         <div class="row">
-            <div class="col-3">
+      <div class="container ">
+         <div class="row d-flex justify-content-center">
+            <div class="col-lg-3">
                <h3>Dev Blog</h3>
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, commodi, voluptates alias obcaecati laborum molestiae blanditiis consectetur molestias libero reprehenderit delectus, nobis aperiam iusto officiis accusamus dolore autem enim
-                  voluptate!</p>
+                  voluptate!
+               </p>
             </div>
 
-            <div class="col-3">
+            <div class="col-lg-3 col-md-6">
                <h3>Contacts</h3>
                <address>
                   <b>DT, Inc.</b><br>
@@ -195,13 +196,12 @@
                </address>
             </div>
 
-            <div class="col-3">
+            <div class="col-lg-3 col-md-6">
                <h3>Navigation</h3>
                <nav class="nav flex-column">
-                  <a class="nav-link active" href="#">Active</a>
-                  <a class="nav-link" href="#">Link</a>
-                  <a class="nav-link" href="#">Link</a>
-                  <a class="nav-link" href="#">Disabled</a>
+                  <a class="nav-link active" href="#">Home</a>
+                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="#">Contract</a>
                </nav>
             </div>
          </div>
